--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -5,3 +5,23 @@ app:
   jwt:
     secret: hIltiHm2ugcSpIKmNS+pjV8bQotTpVEWMqEtJp3Y5ZI=hIltiHm2ugcSpIKmNS+pjV8bQotTpVEWMqEtJp3Y5ZI
     expiration-ms: 86400000
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8085/eureka/
+
+
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/marketplace
+    username: postgres
+    password: root
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
