Custom Global and Route Specific filter in API gateway

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -13,3 +13,10 @@ spring:
         locator:
           enabled: true
           lower-case-service-id: true
+      routes:
+        - id: USER-SERVICE
+          uri: lb://USER-SERVICE
+          predicates:
+            - path=/user/**
+          filters:
+            - CustomRouteFilter
