JwtGatewayFilter, public-urls, api-permissions in AppConstant

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -20,3 +20,8 @@ spring:
             - path=/user/**
           filters:
             - CustomRouteFilter
+
+app:
+  jwt:
+    secret: hIltiHm2ugcSpIKmNS+pjV8bQotTpVEWMqEtJp3Y5ZI=hIltiHm2ugcSpIKmNS+pjV8bQotTpVEWMqEtJp3Y5ZI
+    expiration-ms: 86400000
