SMS service (using Twilio) implementation

--- a/notification-service/src/main/resources/application.yml
+++ b/notification-service/src/main/resources/application.yml
@@ -22,3 +22,8 @@ spring:
           auth: true
           starttls:
             enable: true
+
+twilio:
+  account-sid: don't_look_for_my_sid
+  auth-token: make_your_own_auth-token
+  from-number: and_yeah_number_too
