--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
         - id: USER-SERVICE
           uri: lb://USER-SERVICE
           predicates:
-            - path=/user/**
+            - path=/api/users/**
           filters:
             - CustomRouteFilter
 
